{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 25,
  "lineage": "727ecc34-e869-baf1-3f12-bb4a8eec7321",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "work-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:724063964854:internet-gateway/igw-041ca50406c276866",
            "id": "igw-041ca50406c276866",
            "owner_id": "724063964854",
            "tags": {
              "Name": "work-igw"
            },
            "tags_all": {
              "Name": "work-igw"
            },
            "vpc_id": "vpc-0fcf0bee6441d87a5"
          },
          "dependencies": [
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "work-rtble",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:724063964854:route-table/rtb-0dbf2eef44009249b",
            "id": "rtb-0dbf2eef44009249b",
            "owner_id": "724063964854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041ca50406c276866",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "work-rtble"
            },
            "tags_all": {
              "Name": "work-rtble"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcf0bee6441d87a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.work-igw",
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "work-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d47bbade8ee6af5",
            "route_table_id": "rtb-0dbf2eef44009249b",
            "subnet_id": "subnet-039af3364f75f9975"
          },
          "dependencies": [
            "aws_internet_gateway.work-igw",
            "aws_route_table.work-rtble",
            "aws_subnet.work-subnet",
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "work-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:724063964854:security-group/sg-069fa91890882a345",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-069fa91890882a345",
            "ingress": [],
            "name": "work-sg",
            "name_prefix": "",
            "owner_id": "724063964854",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcf0bee6441d87a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2584052191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069fa91890882a345",
            "security_group_rule_id": "sgr-0d2ef6289ac7499d3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.work-sg",
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.73.67.101/32"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-2690564762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069fa91890882a345",
            "security_group_rule_id": "sgr-0205e18d876010bab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.work-sg",
            "aws_vpc.work-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.73.67.101/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1618186901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069fa91890882a345",
            "security_group_rule_id": "sgr-0d923164a07524db5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.work-sg",
            "aws_vpc.work-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "work-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:724063964854:subnet/subnet-039af3364f75f9975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039af3364f75f9975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724063964854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "work-subnet"
            },
            "tags_all": {
              "Name": "work-subnet"
            },
            "vpc_id": "vpc-0fcf0bee6441d87a5"
          },
          "dependencies": [
            "aws_vpc.work-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "work-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:724063964854:vpc/vpc-0fcf0bee6441d87a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a113a31b8c885af7",
            "default_route_table_id": "rtb-0289001fd531beaaf",
            "default_security_group_id": "sg-0275fd7f55cbc435a",
            "dhcp_options_id": "dopt-5ece7234",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcf0bee6441d87a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0289001fd531beaaf",
            "owner_id": "724063964854",
            "tags": {
              "Name": "work-vpc"
            },
            "tags_all": {
              "Name": "work-vpc"
            }
          }
        }
      ]
    }
  ]
}